--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ config/ec2_config.yml
 config/docker_config.yml
 scripts/ansible-env
 temp
+ansible/inventory/*.ini
+nginx/sites-available/server.conf
