--- a/nginx/nginx_proxy_pass.conf
+++ b/nginx/nginx_proxy_pass.conf
@@ -60,10 +60,11 @@ http {
 	##
     include  conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
+	include /etc/nginx/sites-enabled/*.*;
 
-    map $http_upgrade $connection_upgrade {
-            default       "upgrade";
-    }
+    #map $http_upgrade $connection_upgrade {
+    #        default       "upgrade";
+    #}
 
 # Elastic Beanstalk Nginx Proxy Pass Configuration - generated
 #    server {
